jvimalprasathdev/src/objects/ObjectConvertorMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Object Convertor Mapping with Source and Target feilds / api details</description>
    <fields>
        <fullName>Is_Static__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Static</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapping_Name__c</fullName>
        <label>Mapping Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Api_Name__c</fullName>
        <label>Source Api Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Object Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Object_Name__c</fullName>
        <label>Source Object Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_Value__c</fullName>
        <label>Static Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_API_Name__c</fullName>
        <label>Target API Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object_Name__c</fullName>
        <label>Target Object Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Object Convertor Mapping</label>
</CustomObject>